# aw-watcher-afk-prompt

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: FEATURE_SPLIT_AFK_PERIODS.md  TODO.md
misc/: aw-watcher-afk-prompt.service  aw-watcher-ask-away.service
src/aw_watcher_afk_prompt/: __main__.py  _debug_utils.py  _version.py  config.py  core.py  dialog.py  split_dialog.py  utils.py  widgets.py
src/aw_watcher_ask_away/: __main__.py  config.py  core.py  dialog.py  split_dialog.py  utils.py
tests/: test_config.py  test_core.py  test_lid_integration.py  test_seen_events_store.py  test_split.py  test_split_posting.py  test_utils.py  test_widgets.py
