[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aw-watcher-afk-prompt"
dynamic = ["version"]
description = "Prompt for what you were doing when returning from AFK and log it in ActivityWatch"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["activitywatch", "time-tracking", "productivity", "afk"]
authors = [{ name = "Jeremiah England", email = "englandtuning@gmail.com" }]
maintainers = [{ name = "Tobias Brox", email = "tobias@redpill-linpro.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business :: Scheduling",
  "Topic :: System :: Monitoring",
]
dependencies = ["aw-client", "aw-core", "appdirs"]

[project.scripts]
aw-watcher-afk-prompt = "aw_watcher_afk_prompt.__main__:main"

[project.urls]
Homepage = "https://github.com/tobixen/aw-watcher-afk-prompt"
Documentation = "https://github.com/tobixen/aw-watcher-afk-prompt#readme"
Issues = "https://github.com/tobixen/aw-watcher-afk-prompt/issues"
Source = "https://github.com/tobixen/aw-watcher-afk-prompt"
Changelog = "https://github.com/tobixen/aw-watcher-afk-prompt/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/aw_watcher_afk_prompt/_version.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.1.0", "mypy>=1.0.0", "ruff>=0.0.243"]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/aw_watcher_afk_prompt tests}"
style = ["ruff {args:.}", "black --check --diff {args:.}"]
fmt = ["black {args:.}", "ruff --fix {args:.}", "style"]
all = ["style", "typing"]

[tool.black]
target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["aw_watcher_afk_prompt"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["aw_watcher_afk_prompt", "tests"]
branch = true
parallel = true
omit = ["src/aw_watcher_afk_prompt/_version.py"]

[tool.coverage.paths]
aw_watcher_afk_prompt = [
  "src/aw_watcher_afk_prompt",
  "*/aw-watcher-afk-prompt/src/aw_watcher_afk_prompt",
]
tests = ["tests", "*/aw-watcher-afk-prompt/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
